--- a/app/assets/stylesheets/components/_windows.scss
+++ b/app/assets/stylesheets/components/_windows.scss
@@ -2,9 +2,37 @@
   display: none;
 }
 
-.show-window {
+.show-button {
   background-color: black;
   color: white;
   border-style: none;
   font-family: "Roboto Mono";
+  margin-bottom: 32px;
+  height: 5rem;
+  width: 10rem;
+}
+
+.show-window {
+  background-color: rgba(255, 255, 255, 0.9);
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 70%;
+
+  padding: 6rem;
+  border-radius: 5px;
+  box-shadow: 0 3rem 5rem rgba(0, 0, 0, 0.3);
+  z-index: 10;
+}
+
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.6);
+  backdrop-filter: blur(3px);
+  z-index: 5;
 }
