--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -25,22 +25,29 @@
         <%= image_tag('profile2.jpeg', class: "profile-photo photo-hide") %>
       </div>
 
+      <div class = "profile-text">
+        <p>Hi. My name is Jess Pates.</p>
+        <p>I have ten years experience working in Financial Services Operations. I'm in the midst of a career switch having completed the Web Development bootcamp at Le Wagon in December 2022.</p>
+        <p>I'm now searching for a developer role at a junior / graduate / intern / apprentice level. I'm open to full stack / front end / back end positions.</p>
+        <p>Please get in touch if you would like to chat or have any suitable positions available.</p>
+      </div>
+
       <button class="show-button">Find out more</button>
 
       <div class = "show-window hidden">
       <div><i class="fa-solid fa-xmark close-button"></i></div>
-        <p>My name is Jess Pates. I completed the Web Development bootcamp at Le Wagon in December 2022. Over nine intense weeks I begun to learn Ruby on Rails, SQL, HTML, CSS and Javascript.</p>
-        <p>Beforehand I worked in financial services operations for a number of banks and hedge funds. I'm accustomed to working in fast paced environments and managing multiple deadlines. I particularly enjoyed working for smaller companies where I had greater autonomy and could take the iniative to solve problems.<p>
-        <p>I've decided to switch careers as I'd like to feel greater passion towards my job. Coding offers so many opportunities to learn and I'm excited to develop my skills.
-        <p>I'm now searching for a developer role at a junior / graduate / intern / apprentice level. Open to full stack / front end / back end positions.</p>
-        <p>Please get in touch if you would like to chat or have any suitable positions available.</p>
+        <h5>Experience</h5>
+        <p>I've previously worked in Financial Services Operations for a number of banks and hedge funds. I'm accustomed to working in fast paced environments and managing multiple deadlines. I'm also comfortable working in roles that require high attention to detail and no margin for error. I have particularly enjoyed working for smaller companies where I had greater autonomy and could take the iniative to solve problems.<p>
+        <h5>Bootcamp</h5>
+        <p>I entered Le Wagon's bootcamp with minimal prior experience. Over nine intense weeks I begun to learn Ruby on Rails, SQL, HTML, CSS and Javascript. The culmination was two group projects: an AirBnb style market place, and a mobile first Ruby application designed to bring together football fans.</p>
+        <h5>Aims</h5>
+        <p>I've decided to switch careers as I'd like to feel greater passion towards my job. Right now I'm searching for a role with opportunity and excitement, as well as a company that offers an encouraging and supportive environment. My current focus is building on my current Javascript knowledge before moving on to TypeScript / React / Angular.</p>
       </div>
       <div class="overlay hidden"></div>
 
         <!-- <p>I'm a British citizen - raised in Manchester but more recently a long time London resident. Currently I live in sunny Barcelona. I can work within the UK but would require a visa to work elsewhere. Open to any locations / hybrid working / fully remote.</p>
         I enjoy the challenge of finding solutions and the opportunity to be creative whilst working logically.
         The culmination was two group projects: an AirBnb style market place, and a mobile first Ruby application designed to bring together football fans. -->
-
 
     </div>
 
