--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -33,7 +33,7 @@
 .collapsible-content {
   max-height: 0;
   overflow: hidden;
-  transition: max-height 1s ease-out;
+  transition: max-height 0.5s ease-out;
   background-color: #DFDFDF;
   width: 100%;
   padding-top: 8px;
@@ -46,4 +46,8 @@
   float: right;
   margin-top: -30px;
   margin-right: -16px;
+}
+
+.project-logo:hover {
+  transform: scale(1.2);
 }
