--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -89,13 +89,13 @@
       <div class="project-card">
         <div class="project-title">
           <%= link_to "https://watchlist-bcn1046.herokuapp.com/", target: "_blank" do %>
-            <i class="fa-solid fa-clapperboard"></i>
+            <i class="fa-solid fa-clapperboard project-logo"></i>
           <% end %>
           <a href="https://watchlist-bcn1046.herokuapp.com/", target="_blank"><h3 class="project-header">Watchlist</h3></a>
         </div>
         <div>
           <a class="collapsible" onclick="changeIcon(this)"><i class="fa-solid fa-square-plus"></i></a>
-          <p class="collapsible-content">Site for organising movies into lists based on genre. Users can browse lists, create a new list and add a movie to any list. Built using Ruby on Rails, HTML, CSS and Javascript. <br> Solo project.</p>
+          <p class="collapsible-content">Site for organising movies into lists based on genre. Users can browse lists, create a new list and add a movie to any list. Built using Ruby on Rails, HTML, CSS and Javascript.</p>
         </div>
       </div>
 
