--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -8,10 +8,6 @@
   top: 0;
 }
 
-.navbar-background {
-  // background-color: #FABC3C;
-}
-
 .navbar-transparent {
   background: transparent;
 }
@@ -31,4 +27,8 @@
     color: black;
     font-weight: 500;
   }
+}
+
+.navbar-link:hover {
+  color: white;
 }
