--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,8 +1,8 @@
 <div class="navbar fixed-top navbar-background">
   <ul class="navbar-links">
-    <li><a href="#home">home</a></li>
-    <li><a href="#about-me">about</a></li>
-    <li><a href="#projects">projects</a></li>
-    <li><a href="#contact">contact</a></li>
+    <li><a href="#home" class="navbar-link">home</a></li>
+    <li><a href="#about-me" class="navbar-link">about</a></li>
+    <li><a href="#projects" class="navbar-link">projects</a></li>
+    <li><a href="#contact" class="navbar-link">contact</a></li>
   </ul>
 </div>
