profile and modal text update

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -27,8 +27,8 @@
 
       <div class = "profile-text">
         <p>Hi. My name is Jess Pates.</p>
-        <p>I have ten years experience working in Financial Services Operations. I'm in the midst of a career switch having completed the Web Development bootcamp at Le Wagon in December 2022.</p>
-        <p>I'm now searching for a developer role at a junior / graduate / intern / apprentice level. I'm open to full stack / front end / back end positions.</p>
+        <p>I'm a recent graduate of a Web Development Bootcamp following a career switch from Financial Services Operations.</p>
+        <p>Now I'm searching for a developer role at a junior / graduate / intern / apprentice level. I'm open to full stack / front end / back end positions.</p>
         <p>Please get in touch if you would like to chat or have any suitable positions available.</p>
       </div>
 
@@ -37,11 +37,13 @@
       <div class = "show-window hidden">
       <div><i class="fa-solid fa-xmark close-button"></i></div>
         <h5>Experience</h5>
-        <p>I've previously worked in Financial Services Operations for a number of banks and hedge funds. I'm accustomed to working in fast paced environments and managing multiple deadlines. I'm also comfortable working in roles that require high attention to detail and no margin for error. I have particularly enjoyed working for smaller companies where I had greater autonomy and could take the iniative to solve problems.<p>
+        <p class="modal-text">I have ten years experience working in Financial Services Operations for a number of banks and hedge funds. I'm accustomed to working in fast paced environments and managing multiple deadlines. I'm also comfortable working in roles that require high attention to detail and no margin for error. I have particularly enjoyed working for smaller companies where I had greater autonomy and could take the iniative to solve problems.<p>
         <h5>Bootcamp</h5>
-        <p>I entered Le Wagon's bootcamp with minimal prior experience. Over nine intense weeks I begun to learn Ruby on Rails, SQL, HTML, CSS and Javascript. The culmination was two group projects: an AirBnb style market place, and a mobile first Ruby application designed to bring together football fans.</p>
-        <h5>Aims</h5>
-        <p>I've decided to switch careers as I'd like to feel greater passion towards my job. Right now I'm searching for a role with opportunity and excitement, as well as a company that offers an encouraging and supportive environment. My current focus is building on my current Javascript knowledge before moving on to TypeScript / React / Angular.</p>
+        <p class="modal-text">I entered Le Wagon's bootcamp with minimal prior experience. Over nine intense weeks I begun to learn Ruby on Rails, SQL, HTML, CSS and Javascript. The culmination was two group projects: an AirBnb style market place, and a mobile first Ruby application designed to bring together football fans.</p>
+        <h5>Learning Path</h5>
+        <p class="modal-text">My current focus is building on my current Javascript knowledge before moving on to TypeScript / React / Angular.</p>
+        <h5>Future Roles</h5>
+        <p class="modal-text">I've decided to switch careers as I'd like to feel greater passion towards my job. Right now I'm searching for a role with opportunity and excitement, as well as a company that offers an encouraging and supportive environment.</p>
       </div>
       <div class="overlay hidden"></div>
 
