--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -27,7 +27,7 @@
 
       <div class = "profile-text">
         <p>Hi. My name is Jess Pates.</p>
-        <p>I'm a recent graduate of a Web Development Bootcamp following a career switch from Financial Services Operations.</p>
+        <p>I'm a recent graduate of a Web Development Bootcamp following a career switch from Financial Services Operations. </p>
         <p>Now I'm searching for a developer role at a junior / graduate / intern / apprentice level. I'm open to full stack / front end / back end positions.</p>
         <p>Please get in touch if you would like to chat or have any suitable positions available.</p>
       </div>
@@ -41,7 +41,7 @@
         <h5>Bootcamp</h5>
         <p class="modal-text">I entered Le Wagon's bootcamp with minimal prior experience. Over nine intense weeks I begun to learn Ruby on Rails, SQL, HTML, CSS and Javascript. The culmination was two group projects: an AirBnb style market place, and a mobile first Ruby application designed to bring together football fans.</p>
         <h5>Learning Path</h5>
-        <p class="modal-text">My current focus is building on my current Javascript knowledge before moving on to TypeScript / React / Angular.</p>
+        <p class="modal-text">My current focus is building on my Javascript knowledge before moving on to TypeScript / React / Angular.</p>
         <h5>Future Roles</h5>
         <p class="modal-text">I've decided to switch careers as I'd like to feel greater passion towards my job. Right now I'm searching for a role with opportunity and excitement, as well as a company that offers an encouraging and supportive environment.</p>
       </div>
