--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -27,7 +27,7 @@
 
       <div class = "profile-text">
         <p>Hi. My name is Jess Pates.</p>
-        <p>I'm a recent graduate of a Web Development Bootcamp following a career switch from Financial Services Operations. </p>
+        <p>I'm a recent graduate of a Web Development Bootcamp following a career switch from Financial Services Operations. As someone who likes to constantly learn new things, I'm excited about this new path and future opportunities.</p>
         <p>Now I'm searching for a developer role at a junior / graduate / intern / apprentice level. I'm open to full stack / front end / back end positions.</p>
         <p>Please get in touch if you would like to chat or have any suitable positions available.</p>
       </div>
