gameon added to projects

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -101,6 +101,17 @@
         </div>
       </div>
 
+      <div class="project-card">
+        <div class="project-title">
+          <i class="fa-solid fa-gamepad project-logo"></i>
+          <a><h3 class="project-header">GameOn</h3></a>
+        </div>
+        <div>
+          <a class="collapsible" onclick="changeIcon(this)"><i class="fa-solid fa-square-plus"></i></a>
+          <p class="collapsible-content">Current project. Site featuring a variety of JavaScript powered games.</p>
+        </div>
+      </div>
+
     </div>
   </div>
 
