gameon link added

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -103,12 +103,14 @@
 
       <div class="project-card">
         <div class="project-title">
-          <i class="fa-solid fa-gamepad project-logo"></i>
-          <a><h3 class="project-header">GameOn</h3></a>
+          <%= link_to "https://gameon-ur5o.onrender.com/", target: "_blank" do %>
+            <i class="fa-solid fa-gamepad project-logo"></i>
+          <% end %>
+          <a href="https://gameon-ur5o.onrender.com/", target="_blank"><h3 class="project-header">GameOn</h3></a>
         </div>
         <div>
           <a class="collapsible" onclick="changeIcon(this)"><i class="fa-solid fa-square-plus"></i></a>
-          <p class="collapsible-content">Current project. Site featuring a variety of JavaScript powered games.</p>
+          <p class="collapsible-content">Current project. Arcade style site featuring a variety of JavaScript powered games.</p>
         </div>
       </div>
 
