--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -68,6 +68,19 @@
 
       <div class="project-card">
         <div class="project-title">
+          <%= link_to "https://jp-profile.onrender.com", target: "_blank" do %>
+            <i class="fa-solid fa-arrow-trend-up project-logo"></i>
+          <% end %>
+          <a href="https://jp-profile.onrender.com", target="_blank"><h3 class="project-header">Profile v2.0</h3></a>
+        </div>
+        <div>
+          <a class="collapsible" onclick="changeIcon(this)"><i class="fa-solid fa-square-plus"></i></a>
+          <p class="collapsible-content">Improved work-in-progress version of my profile.</p>
+        </div>
+      </div>
+
+      <div class="project-card">
+        <div class="project-title">
           <%= link_to "https://gameon-ur5o.onrender.com/", target: "_blank" do %>
             <i class="fa-solid fa-gamepad project-logo"></i>
           <% end %>
