profile link update

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -68,10 +68,10 @@
 
       <div class="project-card">
         <div class="project-title">
-          <%= link_to "https://jp-profile.onrender.com", target: "_blank" do %>
+          <%= link_to "https://www.jesspates.com", target: "_blank" do %>
             <i class="fa-solid fa-arrow-trend-up project-logo"></i>
           <% end %>
-          <a href="https://jp-profile.onrender.com", target="_blank"><h3 class="project-header">Profile v2.0</h3></a>
+          <a href="https://www.jesspates.com", target="_blank"><h3 class="project-header">Profile v2.0</h3></a>
         </div>
         <div>
           <a class="collapsible" onclick="changeIcon(this)"><i class="fa-solid fa-square-plus"></i></a>
